--- a/notebooks/createsql_db.ipynb
+++ b/notebooks/createsql_db.ipynb
@@ -109,13 +109,17 @@
     "DROP TABLE IF EXISTS temperatures  CASCADE;\n",
     "DROP TABLE IF EXISTS crop_name CASCADE;\n",
     "DROP TABLE IF EXISTS crop_production_total CASCADE;\n",
+    "DROP TABLE IF EXISTS precipitations  CASCADE;\n",
+    "DROP TABLE IF EXISTS yearly_crop_production CASCADE;\n",
     "\n",
     "CREATE TABLE states (\n",
     "\tstate_id SERIAL PRIMARY KEY\n",
     "\t, state_name CHAR(2)\n",
+    "\t, latitud DEC (10,6)\n",
+    "\t, longitud DEC (10,6)\n",
     ");\n",
     "\n",
-    "\n",
+    "SELECT * FROM states;\n",
     "\n",
     "CREATE TABLE temperatures (\n",
     "\tstate_id INT NOT NULL,\n",
@@ -135,6 +139,7 @@
     "\t, dec FLOAT NOT NULL\n",
     ");\n",
     "\n",
+    "SELECT * FROM temperatures;\n",
     "\n",
     "\n",
     "CREATE TABLE crop_name (\n",
@@ -142,7 +147,7 @@
     "\t, crop_name VARCHAR(255) \n",
     ");\n",
     "\n",
-    "\n",
+    "SELECT * FROM crop_name;\n",
     "\n",
     "CREATE TABLE crop_production_total (\n",
     "\tcrop_id INT NOT NULL,\n",
@@ -153,6 +158,54 @@
     "\tsep_1st BIGINT,\n",
     "\tdec_1st BIGINT\n",
     ");\n",
+    "SELECT * FROM crop_production_total;\n",
+    "\n",
+    "CREATE TABLE precipitations (\n",
+    "\tstate_id INT NOT NULL,\n",
+    "\tFOREIGN KEY (state_id) REFERENCES states(state_id)\n",
+    "\t, year INT NOT NULL\n",
+    "\t, jan DEC(10,6) NOT NULL\n",
+    "\t, feb DEC(10,6) NOT NULL\n",
+    "\t, mar DEC(10,6) NOT NULL\n",
+    "\t, apr DEC(10,6) NOT NULL\n",
+    "\t, may DEC(10,6) NOT NULL\n",
+    "\t, jun DEC(10,6) NOT NULL\n",
+    "\t, jul DEC(10,6) NOT NULL\n",
+    "\t, ago DEC(10,6) NOT NULL\n",
+    "\t, sep DEC(10,6) NOT NULL\n",
+    "\t, oct DEC(10,6) NOT NULL\n",
+    "\t, nov DEC(10,6) NOT NULL\n",
+    "\t, dec DEC(10,6) NOT NULL\n",
+    ");\n",
+    "\n",
+    "SELECT * FROM precipitations;\n",
+    "\n",
+    "CREATE TABLE yearly_crop_production (\n",
+    "\tyear INT,\n",
+    "\tstate VARCHAR(255),\n",
+    "\tcrop_name VARCHAR (255),\n",
+    "\tvalue BIGINT,\n",
+    "\tstate_id INT NOT NULL,\n",
+    "\tFOREIGN KEY (state_id) REFERENCES states(state_id),\n",
+    "\tcrop_id INT NOT NULL,\n",
+    "\tFOREIGN KEY (crop_id) REFERENCES crop_name(crop_id)\n",
+    ");\n",
+    "\n",
+    "INSERT INTO states\n",
+    "(state_name, latitud, longitud)\n",
+    "VALUES\n",
+    "\t('NE', 41.256538, -95.934502),\n",
+    "\t('IA', 41.586834, -93.624962),\n",
+    "\t('IL', 38.317610, -88.904730);\n",
+    "\n",
+    "INSERT INTO crop_name\n",
+    "(crop_name)\n",
+    "VALUES\n",
+    "\t('corn'),\n",
+    "\t('soybean'),\n",
+    "\t('wheat');\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\"\"\"\n",
