--- a/notebooks/prec_sqltable.ipynb
+++ b/notebooks/prec_sqltable.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 3
     }
    ],
    "source": [
@@ -72,35 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Upload temperature for each state\n",
-    "\"\"\"\n",
-    "1) get the clean csv data\n",
-    "\"\"\"\n",
-    "list_to_extract = ['NE','IA','IL']\n",
-    "for int in list_to_extract:\n",
-    "    state_ini = int\n",
-    "    path_temp = Path (f'../data/clean_data/{state_ini}_weather_data_clean.csv')\n",
-    "    csv_data = pd.read_csv(path_temp)\n",
-    "    df =pd.DataFrame(data=csv_data)\n",
-    "    df['date'] = pd.to_datetime(df['date'])\n",
-    "    df['day'] = df['date'].dt.day\n",
-    "    df['month'] =df['date'].dt.month\n",
-    "    df['year'] = df['date'].dt.year\n",
-    "    monthly_temp_precp = df.groupby(['year','month']).mean().round(decimals = 2)\n",
-    "    monthly_temp_precp.drop(columns='day', inplace = True)\n",
-    "    monthly_prec = monthly_temp_precp.drop(columns='average_temperature')\n",
-    "    monthly_prec.reset_index(inplace=True)\n",
-    "\n",
-    "    monthly_prec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,68 +108,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Upload temperature for each state\n",
+    "\"\"\"\n",
+    "1) get the clean csv data\n",
+    "\"\"\"\n",
+    "list_to_extract = ['NE','IA','IL']\n",
     "year_ini = 2001\n",
     "year_end = 2020\n",
-    "df = monthly_prec\n",
-    "state_dt_to_table = state_ini\n",
     "name_database = \"crop_prod_db\"\n",
     "\n",
-    "my_postgres_userid = os.getenv(\"POSTGRES_USER_ID\")\n",
-    "my_postgres_password = os.getenv(\"POSTGRES_PASSWORD\")\n",
-    "dbsession2 = psycopg2.connect(database = name_database, user= my_postgres_userid, password = my_postgres_password)\n",
-    "dbcursor = dbsession2.cursor()\n",
-    "dbsession2.autocommit = True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for int in range (year_ini,year_end):\n",
-    "    my_df_a = my_sql_temp (int,df)\n",
-    "    pd.DataFrame(my_df_a)\n",
-    "    my_df = my_df_a.set_index('year')\n",
-    "    type(my_df)\n",
-    "    jan_temp = my_df.iloc[0]['jan']\n",
-    "    feb_temp = my_df.iloc[0]['feb']\n",
-    "    mar_temp = my_df.iloc[0]['mar']\n",
-    "    apr_temp = my_df.iloc[0]['apr']\n",
-    "    may_temp = my_df.iloc[0]['may']\n",
-    "    jun_temp = my_df.iloc[0]['jun']\n",
-    "    jul_temp = my_df.iloc[0]['jul']\n",
-    "    aug_temp = my_df.iloc[0]['aug']\n",
-    "    sep_temp = my_df.iloc[0]['sep']\n",
-    "    oct_temp = my_df.iloc[0]['oct']\n",
-    "    nov_temp = my_df.iloc[0]['nov']\n",
-    "    dec_temp = my_df.iloc[0]['dec']\n",
-    "    state_temp_to_upload = state_dt_to_table \n",
+    "for int in list_to_extract:\n",
+    "    state_ini = int\n",
     "\n",
-    "    if state_temp_to_upload == 'NE' :\n",
-    "        state_id = 1\n",
-    "    elif state_temp_to_upload == 'IA' :\n",
-    "        state_id = 2\n",
-    "    elif state_temp_to_upload == 'IL':\n",
-    "        state_id = 3\n",
-    "    else :\n",
-    "        state_id = 100\n",
+    "    path_temp = Path (f'../data/clean_data/{state_ini}_weather_data_clean.csv')\n",
+    "    csv_data = pd.read_csv(path_temp)\n",
+    "    df =pd.DataFrame(data=csv_data)\n",
+    "    type(df['date'])\n",
+    "    df.dtypes\n",
+    "    df['date'] = pd.to_datetime(df['date'])\n",
+    "    df.dtypes # this is to identify the type of variable that column \"date\" is\n",
     "    \n",
-    "    insert_query = \"\"\"\n",
-    "\n",
-    "    INSERT INTO precipitations\n",
-    "    (state_id, year, jan, feb,mar,apr,may,jun,jul,ago, sep, oct, nov,dec )\n",
-    "    VALUES\n",
-    "    (\"\"\" +str(state_id)+\"\"\",\"\"\" + str(int)+\"\"\", \"\"\" +str(jan_temp)+\"\"\",\"\"\"+str(feb_temp)+\"\"\",\"\"\" +str(mar_temp)+\"\"\",\"\"\"+str(apr_temp)+\"\"\",\"\"\"+str(may_temp)+\"\"\",\"\"\"+str      (jun_temp)+\"\"\",\"\"\"+str(jul_temp)+\"\"\",\"\"\"+str(aug_temp)+\"\"\",\"\"\"+str(sep_temp)+\"\"\",\"\"\"+str(oct_temp)+\"\"\",\"\"\"+str(nov_temp)+\"\"\",\"\"\"+str(dec_temp)+\"\"\");\n",
-    "    \"\"\"\n",
+    "    df['day'] = df['date'].dt.day\n",
+    "    df['month'] =df['date'].dt.month\n",
+    "    df['year'] = df['date'].dt.year\n",
+    "    monthly_temp_precp = df.groupby(['year','month']).mean().round(decimals = 5)\n",
+    "    monthly_temp_precp.drop(columns='day', inplace = True)\n",
+    "    monthly_temp = monthly_temp_precp.drop(columns='average_temperature')\n",
+    "    monthly_temp.reset_index(inplace=True)\n",
+    "    monthly_temp\n",
     "    \n",
-    "    dbcursor.execute(insert_query)\n",
+    "    df = monthly_temp\n",
+    "    state_dt_to_table = state_ini\n",
     "\n",
-    "dbsession2.close()"
+    "\n",
+    "    my_postgres_userid = os.getenv(\"POSTGRES_USER_ID\")\n",
+    "    my_postgres_password = os.getenv(\"POSTGRES_PASSWORD\")\n",
+    "    dbsession2 = psycopg2.connect(database = name_database, user= my_postgres_userid, password = my_postgres_password)\n",
+    "    dbcursor = dbsession2.cursor()\n",
+    "    dbsession2.autocommit = True\n",
+    "    \n",
+    "    for int in range (year_ini,year_end):\n",
+    "        my_df_a = my_sql_temp (int,df)\n",
+    "        pd.DataFrame(my_df_a)\n",
+    "        my_df = my_df_a.set_index('year')\n",
+    "        type(my_df)\n",
+    "        jan_temp = my_df.iloc[0]['jan']\n",
+    "        feb_temp = my_df.iloc[0]['feb']\n",
+    "        mar_temp = my_df.iloc[0]['mar']\n",
+    "        apr_temp = my_df.iloc[0]['apr']\n",
+    "        may_temp = my_df.iloc[0]['may']\n",
+    "        jun_temp = my_df.iloc[0]['jun']\n",
+    "        jul_temp = my_df.iloc[0]['jul']\n",
+    "        aug_temp = my_df.iloc[0]['aug']\n",
+    "        sep_temp = my_df.iloc[0]['sep']\n",
+    "        oct_temp = my_df.iloc[0]['oct']\n",
+    "        nov_temp = my_df.iloc[0]['nov']\n",
+    "        dec_temp = my_df.iloc[0]['dec']\n",
+    "        state_temp_to_upload = state_dt_to_table \n",
+    "\n",
+    "        if state_temp_to_upload == 'NE' :\n",
+    "            state_id = 1\n",
+    "        elif state_temp_to_upload == 'IA' :\n",
+    "            state_id = 2\n",
+    "        elif state_temp_to_upload == 'IL':\n",
+    "            state_id = 3\n",
+    "        else :\n",
+    "            state_id = 100\n",
+    "        \n",
+    "        insert_query = \"\"\"\n",
+    "\n",
+    "        INSERT INTO precipitations\n",
+    "        (state_id, year, jan, feb,mar,apr,may,jun,jul,ago, sep, oct, nov,dec )\n",
+    "        VALUES\n",
+    "        (\"\"\" +str(state_id)+\"\"\",\"\"\" + str(int)+\"\"\", \"\"\" +str(jan_temp)+\"\"\",\"\"\"+str(feb_temp)+\"\"\",\"\"\" +str(mar_temp)+\"\"\",\"\"\"+str(apr_temp)+\"\"\",\"\"\"+str(may_temp)+\"\"\",\"\"\"             +str      (jun_temp)+\"\"\",\"\"\"+str(jul_temp)+\"\"\",\"\"\"+str(aug_temp)+\"\"\",\"\"\"+str(sep_temp)+\"\"\",\"\"\"+str(oct_temp)+\"\"\",\"\"\"+str(nov_temp)+\"\"\",\"\"\"+str(dec_temp)+\"\"\");\n",
+    "        \"\"\"\n",
+    "    \n",
+    "        dbcursor.execute(insert_query)\n",
+    "\n",
+    "dbsession2.close()\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
