--- a/data/crop.ipynb
+++ b/data/crop.ipynb
@@ -46,6 +46,13 @@
    ]
   },
   {
+   "source": [
+    "### pulling and clean usda api data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -62,12 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#assign paramenter variables\n",
-    "# commodity_dict = {'CORN' : ['PRODUCTION', 'STOCKS'], 'SOYBEANS' : ['PRODUCTION', 'STOCKS']}\n",
-    "\n",
+    "#assign paramenter variables to pull data from usda query\n",
     "commodity = 'CORN'\n",
-    "statistic = 'PRODUCTION'\n",
-    "state = 'NE'\n",
+    "stat_list = ['PRODUCTION', 'STOCKS']\n",
+    "level_list = ['STATE', 'NATIONAL']\n",
     "year = 2019"
    ]
   },
@@ -75,35 +80,93 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pull data from usda api using pull_usda_data function based on defined variables and make list of returned dataframes of data\n",
+    "data_df_list = []\n",
+    "\n",
+    "for stat in stat_list:\n",
+    "    for level in level_list:\n",
+    "        data_df = pull_usda_data(usda_api_key, commodity, stat, level, year)\n",
+    "        data_df_list.append(data_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#combine all data pulled from usda api into one dataframe\n",
+    "commodity_df = pd.concat(data_df_list, axis = 0)\n",
+    "\n",
+    "#export to .csv based on sub_commodity\n",
+    "for sub_commodity in commodity_df['sub_commodity'].unique():\n",
+    "    clean_data_df = commodity_df.loc[commodity_df['sub_commodity'] == sub_commodity, :]\n",
+    "    clean_data_df.to_csv(f'clean_data/usda_data/usda_data_{commodity.lower()}_{sub_commodity.lower()}.csv')"
+   ]
+  },
+  {
+   "source": [
+    "### pulling wasde raw data from api to save out excel files"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  commodity_desc state_alpha statisticcat_desc util_practice_desc unit_desc  \\\n",
-       "0           CORN          NE        PRODUCTION              GRAIN         $   \n",
-       "1           CORN          NE        PRODUCTION              GRAIN         $   \n",
-       "2           CORN          NE        PRODUCTION              GRAIN         $   \n",
-       "3           CORN          NE        PRODUCTION              GRAIN         $   \n",
-       "4           CORN          NE        PRODUCTION              GRAIN         $   \n",
-       "\n",
-       "  state_alpha freq_desc  year reference_period_desc       Value  \n",
-       "0          NE    ANNUAL  2019                  YEAR  6784596000  \n",
-       "1          NE    ANNUAL  2018                  YEAR  6392448000  \n",
-       "2          NE    ANNUAL  2017                  YEAR  5639055000  \n",
-       "3          NE    ANNUAL  2016                  YEAR  5643668000  \n",
-       "4          NE    ANNUAL  2015                  YEAR  6043118000  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>commodity_desc</th>\n      <th>state_alpha</th>\n      <th>statisticcat_desc</th>\n      <th>util_practice_desc</th>\n      <th>unit_desc</th>\n      <th>state_alpha</th>\n      <th>freq_desc</th>\n      <th>year</th>\n      <th>reference_period_desc</th>\n      <th>Value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CORN</td>\n      <td>NE</td>\n      <td>PRODUCTION</td>\n      <td>GRAIN</td>\n      <td>$</td>\n      <td>NE</td>\n      <td>ANNUAL</td>\n      <td>2019</td>\n      <td>YEAR</td>\n      <td>6784596000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>CORN</td>\n      <td>NE</td>\n      <td>PRODUCTION</td>\n      <td>GRAIN</td>\n      <td>$</td>\n      <td>NE</td>\n      <td>ANNUAL</td>\n      <td>2018</td>\n      <td>YEAR</td>\n      <td>6392448000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>CORN</td>\n      <td>NE</td>\n      <td>PRODUCTION</td>\n      <td>GRAIN</td>\n      <td>$</td>\n      <td>NE</td>\n      <td>ANNUAL</td>\n      <td>2017</td>\n      <td>YEAR</td>\n      <td>5639055000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>CORN</td>\n      <td>NE</td>\n      <td>PRODUCTION</td>\n      <td>GRAIN</td>\n      <td>$</td>\n      <td>NE</td>\n      <td>ANNUAL</td>\n      <td>2016</td>\n      <td>YEAR</td>\n      <td>5643668000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CORN</td>\n      <td>NE</td>\n      <td>PRODUCTION</td>\n      <td>GRAIN</td>\n      <td>$</td>\n      <td>NE</td>\n      <td>ANNUAL</td>\n      <td>2015</td>\n      <td>YEAR</td>\n      <td>6043118000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+       "'2020-01-01'"
+      ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 10
     }
    ],
    "source": [
-    "corn_df = pull_usda_data(usda_api_key, commodity, statistic, state, year)\n",
+    "datetime(2020, 1, 1).strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#setup wasde api request\n",
+    "login_info = {\"auth[email]\":\"jordan.m.gross@gmail.com\",\"auth[password]\":\"Swoosh!4\"}\n",
+    "token = requests.post('https://usda.library.cornell.edu/user_token', data = login_info).json()\n",
+    "token = token['jwt']\n",
     "\n",
-    "corn_df.head()"
+    "end_date = datetime.today().strftime('%Y-%m-%d')\n",
+    "\n",
+    "files = requests.get(f'https://usda.library.cornell.edu/api/v1/release/findByIdentifier/wasde?latest=false&start_date=2008-06-01&end_date={end_date}', headers = ({'Authorization' :  f'Bearer {token}'})).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loop through json returned from wasde api request to find .xls report links for each month and save out excel file to raw data folder\n",
+    "for i in files:\n",
+    "    for file in i['files']:\n",
+    "        if '.xls' in file:\n",
+    "            xls_url = file\n",
+    "        else:\n",
+    "            next\n",
+    "    \n",
+    "    xls_data = requests.get(xls_url)\n",
+    "\n",
+    "    with open(f'raw_data/wasde_data/wasde_{i[\"release_datetime\"]}.xls', 'wb') as output:\n",
+    "        output.write(xls_data.content)"
    ]
   }
  ]
