part of analysis on etf vs stocks and saved out temp png file saved out as placeholder

--- a/data/crop.ipynb
+++ b/data/crop.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "source": [
-    "### pulling and clean usda api data"
+    "### pulling and cleaning usda api data"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -103,7 +103,7 @@
     "#export to .csv based on sub_commodity\n",
     "for sub_commodity in commodity_df['sub_commodity'].unique():\n",
     "    clean_data_df = commodity_df.loc[commodity_df['sub_commodity'] == sub_commodity, :]\n",
-    "    clean_data_df.to_csv(f'clean_data/usda_data/usda_data_{commodity.lower()}_{sub_commodity.lower()}.csv')"
+    "    clean_data_df.to_csv(f'clean_data/usda_data/usda_data_{commodity.lower()}_{sub_commodity.lower()}.csv', index = False)"
    ]
   },
   {
@@ -112,26 +112,6 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "'2020-01-01'"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "datetime(2020, 1, 1).strftime('%Y-%m-%d')"
-   ]
   },
   {
    "cell_type": "code",
