cleaned up png's with toolbar

--- a/notebooks/jordan.ipynb
+++ b/notebooks/jordan.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "\n",
     "from bokeh.plotting import figure, output_file, show\n",
     "from bokeh.models import Range1d, LinearAxis, Legend\n",
-    "from bokeh.io import export_png"
+    "from bokeh.io import export_png, save"
    ]
   },
   {
@@ -76,43 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rolling_returns_df = returns_df.rolling(window = 30).mean().dropna()\n",
-    "rolling_vol_df = returns_df.rolling(window = 30).std().dropna()\n",
-    "rolling_corr_df = pd.DataFrame(returns_df['corn'].rolling(window = 30).corr(other = returns_df['cornf']).dropna(), columns = ['rolling_correlation'])"
+    "rolling_price_df = prices_df.rolling(window = 50).mean().dropna()\n",
+    "rolling_returns_df = returns_df.rolling(window = 50).mean().dropna()\n",
+    "rolling_vol_df = returns_df.rolling(window = 50).std().dropna()\n",
+    "rolling_corr_df = pd.DataFrame(returns_df['corn'].rolling(window = 50).corr(other = returns_df['cornf']).dropna(), columns = ['rolling_correlation'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "                corn     cornf\n",
-       "2011-11-01 -0.001603 -0.001634"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>corn</th>\n      <th>cornf</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2011-11-01</th>\n      <td>-0.001603</td>\n      <td>-0.001634</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "source": [
-    "price_data_df = rolling_returns_df.merge(rolling_corr_df, how = 'inner', right_index = True, left_index = True).reset_index()\n",
-    "price_data_df = price_data_df.rename(columns = {'index' : 'date', 'corn' : 'etf', 'cornf' : 'futures', 'rolling_correlation' : 'rolling_correlation'})\n",
-    "\n",
-    "rolling_returns_df.head(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +100,13 @@
     "y_futures = rolling_data_df['futures']\n",
     "y_correlation = rolling_data_df['rolling_correlation']\n",
     "\n",
-    "rolling_plot = figure(plot_width = 800, plot_height = 400, title = 'corn etf & futures daily returns', x_axis_label = 'date', y_axis_label = '30-day rolling returns', x_axis_type = 'datetime')\n",
+    "rolling_plot = figure(plot_width = 800, plot_height = 400, title = 'corn etf & futures daily returns', x_axis_label = 'date', y_axis_label = '50-day moving averages', x_axis_type = 'datetime')\n",
     "\n",
     "rolling_plot.y_range = Range1d(min(y_etf.min(), y_futures.min()), max(y_etf.max(), y_futures.max()))\n",
     "rolling_plot.line(x_rolling, y_etf, line_width = 1, color = 'DarkSlateGrey', legend_label = 'etf')\n",
     "rolling_plot.line(x_rolling, y_futures, line_width = 1, color = 'CornflowerBlue', legend_label = 'futures', alpha = .5)\n",
     "rolling_plot.xaxis.major_label_orientation = 'vertical'\n",
-    "rolling_plot.legend.location = 'bottom_right'\n",
+    "rolling_plot.legend.location = 'top_right'\n",
     "\n",
     "export_png(rolling_plot, filename = f'../images/rolling_plot.png')\n",
     "\n",
@@ -139,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +131,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>commodity</th>\n      <th>sub_commodity</th>\n      <th>location</th>\n      <th>stat</th>\n      <th>unit</th>\n      <th>frequency</th>\n      <th>year</th>\n      <th>period</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>CORN</td>\n      <td>GRAIN</td>\n      <td>AL</td>\n      <td>PRODUCTION</td>\n      <td>$</td>\n      <td>ANNUAL</td>\n      <td>2000</td>\n      <td>YEAR</td>\n      <td>23166000.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 27
     }
    ],
    "source": [
@@ -166,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +159,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>report_date</th>\n      <th>commodity</th>\n      <th>stat</th>\n      <th>year</th>\n      <th>data_type</th>\n      <th>month</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2000-03-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2000</td>\n      <td>actual</td>\n      <td>mar</td>\n      <td>5.601895e+09</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2000-06-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2000</td>\n      <td>actual</td>\n      <td>jun</td>\n      <td>3.585938e+09</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2000-09-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2000</td>\n      <td>actual</td>\n      <td>sep</td>\n      <td>1.717549e+09</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2000-12-01</td>\n      <td>CORN</td>\n      <td>PRODUCTION</td>\n      <td>2000</td>\n      <td>actual</td>\n      <td>dec</td>\n      <td>9.915051e+09</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2000-12-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2000</td>\n      <td>actual</td>\n      <td>dec</td>\n      <td>8.529634e+09</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 28
     }
    ],
    "source": [
@@ -203,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -258,23 +234,23 @@
      "data": {
       "text/plain": [
        "         date  rolling_correlation report_date commodity    stat    year  \\\n",
-       "17 2011-12-01             0.909373  2011-12-01      CORN  STOCKS  2011.0   \n",
-       "18 2011-12-02             0.917190  2011-12-01      CORN  STOCKS  2011.0   \n",
-       "19 2011-12-07             0.917461  2011-12-01      CORN  STOCKS  2011.0   \n",
-       "20 2011-12-08             0.921419  2011-12-01      CORN  STOCKS  2011.0   \n",
-       "21 2011-12-09             0.921544  2011-12-01      CORN  STOCKS  2011.0   \n",
+       "46 2012-03-01             0.975506  2012-03-01      CORN  STOCKS  2012.0   \n",
+       "47 2012-03-02             0.976344  2012-03-01      CORN  STOCKS  2012.0   \n",
+       "48 2012-03-05             0.976774  2012-03-01      CORN  STOCKS  2012.0   \n",
+       "49 2012-03-06             0.976134  2012-03-01      CORN  STOCKS  2012.0   \n",
+       "50 2012-03-07             0.975478  2012-03-01      CORN  STOCKS  2012.0   \n",
        "\n",
        "   data_type month  value  \n",
-       "17    actual   dec   9.65  \n",
-       "18    actual   dec   9.65  \n",
-       "19    actual   dec   9.65  \n",
-       "20    actual   dec   9.65  \n",
-       "21    actual   dec   9.65  "
+       "46    actual   mar   6.02  \n",
+       "47    actual   mar   6.02  \n",
+       "48    actual   mar   6.02  \n",
+       "49    actual   mar   6.02  \n",
+       "50    actual   mar   6.02  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>rolling_correlation</th>\n      <th>report_date</th>\n      <th>commodity</th>\n      <th>stat</th>\n      <th>year</th>\n      <th>data_type</th>\n      <th>month</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>17</th>\n      <td>2011-12-01</td>\n      <td>0.909373</td>\n      <td>2011-12-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2011.0</td>\n      <td>actual</td>\n      <td>dec</td>\n      <td>9.65</td>\n    </tr>\n    <tr>\n      <th>18</th>\n      <td>2011-12-02</td>\n      <td>0.917190</td>\n      <td>2011-12-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2011.0</td>\n      <td>actual</td>\n      <td>dec</td>\n      <td>9.65</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>2011-12-07</td>\n      <td>0.917461</td>\n      <td>2011-12-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2011.0</td>\n      <td>actual</td>\n      <td>dec</td>\n      <td>9.65</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>2011-12-08</td>\n      <td>0.921419</td>\n      <td>2011-12-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2011.0</td>\n      <td>actual</td>\n      <td>dec</td>\n      <td>9.65</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>2011-12-09</td>\n      <td>0.921544</td>\n      <td>2011-12-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2011.0</td>\n      <td>actual</td>\n      <td>dec</td>\n      <td>9.65</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>date</th>\n      <th>rolling_correlation</th>\n      <th>report_date</th>\n      <th>commodity</th>\n      <th>stat</th>\n      <th>year</th>\n      <th>data_type</th>\n      <th>month</th>\n      <th>value</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>46</th>\n      <td>2012-03-01</td>\n      <td>0.975506</td>\n      <td>2012-03-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2012.0</td>\n      <td>actual</td>\n      <td>mar</td>\n      <td>6.02</td>\n    </tr>\n    <tr>\n      <th>47</th>\n      <td>2012-03-02</td>\n      <td>0.976344</td>\n      <td>2012-03-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2012.0</td>\n      <td>actual</td>\n      <td>mar</td>\n      <td>6.02</td>\n    </tr>\n    <tr>\n      <th>48</th>\n      <td>2012-03-05</td>\n      <td>0.976774</td>\n      <td>2012-03-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2012.0</td>\n      <td>actual</td>\n      <td>mar</td>\n      <td>6.02</td>\n    </tr>\n    <tr>\n      <th>49</th>\n      <td>2012-03-06</td>\n      <td>0.976134</td>\n      <td>2012-03-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2012.0</td>\n      <td>actual</td>\n      <td>mar</td>\n      <td>6.02</td>\n    </tr>\n    <tr>\n      <th>50</th>\n      <td>2012-03-07</td>\n      <td>0.975478</td>\n      <td>2012-03-01</td>\n      <td>CORN</td>\n      <td>STOCKS</td>\n      <td>2012.0</td>\n      <td>actual</td>\n      <td>mar</td>\n      <td>6.02</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 31
     }
    ],
    "source": [
@@ -292,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
